--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 keboola.component==1.3.6
-keboola.utils
-keboola.http-client
-tabula-py
-mock
-freezegun
-PyPDF2
+tabula-py==2.3.0
+mock==4.0.3
+freezegun==1.1.0
+PyPDF2==1.26.0
