--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,12 +1,5 @@
 name: Keboola Component Build & Deploy Pipeline
-on:
-  push:
-    branches:
-      - 'feature/*'
-      - 'bug/*'
-      - 'fix/*'
-    tags:
-      - '*' # Skip the workflow on the main branch without tags
+on: [ push ]
 
 concurrency: ci-${{ github.ref }} # to avoid tag collisions in the ECR
 env:
@@ -48,7 +41,7 @@ jobs:
             echo "branch_name=$branch_name" | tee -a $GITHUB_OUTPUT
           else
             raw=$(git branch -r --contains ${{ github.ref }})
-            branch="$(echo ${raw//origin\//} | tr -d '\n')"
+            branch="$(echo $raw | sed "s/.*origin\///" | tr -d '\n')"
             echo "branch_name=$branch" | tee -a $GITHUB_OUTPUT
           fi
 
